# micro-cpuflags

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs  simd.rs
src/info/: mod.rs
src/info/model/: mod.rs  uarch.rs  vendor.rs
