[package]
name = "micro-cpuflags"
version = "0.1.0"
authors = ["Andrés García <agrc14@gmail.com>"]
edition = "2018"
description = "Framework utility tool to read CPU flags and information"
readme = "README.md"
homepage = "https://github.com/micro-rust/micro-elf"
repository = "https://github.com/micro-rust/micro-elf"
license = "MPL-2.0"



[dependencies]
